# pico-template

./: README.md  hooks.lua  templater.yaml
scripts/: init.sh  submodules.sh
{{ .project.name }}/: .gitignore  CMakeLists.txt  README.md
